# paycode-legacy

./: Cargo.toml  LISENCE  README.md
src/: controller.rs  errors.rs  main.rs  services.rs  structs.rs
src/controller/: index.rs
src/controller/v1/: api.rs
src/errors/: resolve_errors.rs
src/services/: qrcode_services.rs  result_services.rs
src/structs/: app_state.rs
src/structs/pay_code/: client.rs  server.rs
