[package]
name = "PayCode"
version = "0.1.0"
authors = ["Richard <zqdbyct@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
actix-web = { version = "3", features = ["openssl"] }
hex-literal = "0.3.3"
aes = "0.7.5"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"