[package]
name = "pay_code"
version = "0.1.1"
authors = ["Richard <zqdbyct@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
r2d2 = "0.8.9"
r2d2_mysql = "21.0.0"
aes = "0.7.5"
openssl = "0.10"
serde = { version = "^1.0", feature = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
block-modes = "0.8.1"
hex = "0.4.3"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
mime = "0.3.16"
env_logger = "0.8.4"
derive_more = "0.99.16"
